correccion de errores

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto = update
 spring.application.name=app
 
-jwt.secretKey = 123qweasd
-jwt.expiration = 3600000
+jwt.secretKey=myprecioussupersecretjwtkey1234567890
+jwt.expiration=3600000
