--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/Consultory
 spring.datasource.username=postgres
-spring.datasource.password=4408188k
+spring.datasource.password=traumsirene22
 spring.jpa.show-sql=true
 
 ## Hibernate Properties
